Basic setup complete?

--- a/navbar.html
+++ b/navbar.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>NAVBAR SANDBOX</title>
-    <meta name="description" content="">
+    <meta name="description" content="navbar">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="navbar.js">
+    <link rel="stylesheet" href="navbar.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav>
@@ -18,14 +19,17 @@
       </div>
       <div class="nav-links">
         <ul>
-          <li><a href="">About</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </div>
     </nav>
     <section class="landing">
-      HELLO THIS IS WHERE THE REST OF THE STUFF GOES
+      <div class="textbox">
+        <h2>Welcome!</h2>
+        <h3>This is where the rest of the stuff would go, if there was any stuff to go here.</h3>
+     </div>
     </section>
 
     
